2009-02-20  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #10452: Fixed flaws in PATH_INFO check for simulateStaticDocuments

2009-02-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8905: option+space for inserting non-braking space on Mac OSX does not work properly
	* Added feature #10510: htmlArea RTE: Allow to specify default content language in BE

2009-02-19  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up for feature #10374: Add helper function for additional frontend editing controllers and views

2009-02-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10482: htmlArea RTE: Find & replace sometimes leaves marks in the content

2009-02-19  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #10454: t3lib_div::makeInstanceClassName() allows to bypass checks for t3lib_Singleton

2009-02-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10479: htmlArea RTE: JS error is raised when using the delete icon on a flexform
	* Fixed bug #10453: Wrong text for "upload file" in link popup

2009-02-18  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10452: Evaluation PATH_INFO in tslib_fe::checkAlternativeIdMethods() sets false positives and should be moved to tx_simulatestatic

2009-02-17  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up for feature #10374: Add helper function for additional frontend editing controllers and views

2009-02-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9729: Ship optimal TYPO3 configuration by default

2009-02-17  Steffen Kamper  <info@sk-typo3.de>

	* Fixed Bug #10338: Feature: NewRecordWizard with grouping and sorting

2009-02-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10450: Typing error in simulateStaticDocuments to determine the current mode

2009-02-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed Bug #9439: followUp - renamed TS mod.wizards.newContentElements to mod.wizards.newContentElement
	* Fixed Bug #10121: followUp - replaced extJScode with extJsCode in template.php
