@@ -53,6 +53,8 @@
 		<input type="hidden" name="pspell_mode" id="f_pspell_mode" />
 		<input type="hidden" name="userUid" id="f_user_uid" />
 		<input type="hidden" name="enablePersonalDicts" id="f_personal_dicts" />
+		<input type="hidden" name="showDictionaries" id="f_show_dictionaries" />
+		<input type="hidden" name="restrictToDictionaries" id="f_restrict_to_dictionaries" />
 		<input type="hidden" name="init" id="f_init" value="1" />
 	</form>
 	<div class="title">Spell Checker</div>
