@@ -6,6 +6,7 @@
 
 	* Fixed bug #8905: option+space for inserting non-braking space on Mac OSX does not work properly
 	* Added feature #10510: htmlArea RTE: Allow to specify default content language in BE
+	* Added feature #10513: htmlArea RTE: Improve spell checker configurability
 
 2009-02-19  Jeff Segars  <jeff@webempoweredchurch.org>
 
